--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@types/node": "^12.20.55",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.5.1",
     "react": "^18.2.0",
+    "react-chakra-slide-show": "^1.0.11",
     "react-dom": "^18.2.0",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
+    "react-slideshow-image": "^4.0.5",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
