--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-chakra-slide-show": "^1.0.11",
     "react-dom": "^18.2.0",
+    "react-gtm-module": "^2.0.11",
     "react-icons": "^3.11.0",
     "react-scripts": "5.0.1",
     "react-slideshow-image": "^4.0.5",
